--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "My Blogs Name"
+title: "Jaume Cloquell Capo"
 author: "jaume cloquell capo"
 description: "Soft. Engineer developer | Linux" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
