feat(img): add path

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Jaume Cloquell Capo"
+title: "Jaume Cloquell Capoi"
 author: "jaume cloquell capo"
 description: "Soft. Engineer developer | Linux" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
@@ -7,7 +7,7 @@ description: "Soft. Engineer developer | Linux" # This will show up in places li
 email: "jaumecloquell@mail.com"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
-linkedin_username: "www.linkedin.com/in/jaume-cloquell"
+linkedin_username: "https://www.linkedin.com/in/jaume-cloquell/"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
