--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: "Jaume Cloquell Capoi"
+title: "Jaume Blog"
 author: "jaume cloquell capo"
 description: "Soft. Engineer developer | Linux" # This will show up in places like twitter, linkedin, etc, if you share your sites url as a post.
 
 # Email / Social media user names used by the minima theme:
 # All of these are optional and can be removed or commented out
-email: "jaumecloquell@mail.com"
+email: "jaumecloquell@gmail.com"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
 linkedin_username: "https://www.linkedin.com/in/jaume-cloquell/"
