feat(img): add path

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Soft. Engineer developer | Linux" # This will show up in places li
 email: "jaumecloquell@gmail.com"
 #twitter_username: "twitteruser"
 #github_username: "githubuser"
-linkedin_username: "https://www.linkedin.com/in/jaume-cloquell/"
+linkedin_username: "https://www.linkedin.com/in/jaume-cloquell"
 #facebook_username: username
 #flickr_username: username
 #instagram_username: username
