feat(img): add path

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 theme: minima
 
-title: Jaume Blog
+title: Jaume Blog. Sr. Soft Enginyeer
 author: Jaume Cloquell Capo
-email: jaumecloquell@gmail.net
+email: jaumecloquell@gmail.com
 # url: https://chadbaldwin.net
 
 timezone: Etc/UTC # GitHub uses UTC. This is to force dev environment to match
