--- a/_data/books.yml
+++ b/_data/books.yml
@@ -20,7 +20,7 @@
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2022-07-10
 
-  - title: Domain-Driven Design: Tackling Complexity in the Heart of Software
+  - title: Domain driven design. Tackling Complexity in the Heart of Software
   author: Eric Evans
   # summary: \"Designing Data-Intensive Applications is one of the greatest reference books. When I was working on databases at Google I regularly recommended it to coworkers who needed more background on particular distributed systems topics. It will keep being a go-to book as long as I work in this field.\"
   # link: https://amzn.to/3xLNFqX
