--- a/_data/books.yml
+++ b/_data/books.yml
@@ -14,15 +14,8 @@
   #isCurrent: true # removing isCurrent status - intend to restart book from beginning
 
 - title: Designing Data-Intensive Applications
-  author: Martin Kleppmann 
+  author: Gene Kim
   summary: \"Designing Data-Intensive Applications is one of the greatest reference books. When I was working on databases at Google I regularly recommended it to coworkers who needed more background on particular distributed systems topics. It will keep being a go-to book as long as I work in this field.\"
-  # link: https://amzn.to/3xLNFqX
-  rating: ⭐⭐⭐⭐⭐
-  completeDate: 2022-07-10
-
-  - title: Domain driven design. Tackling Complexity in the Heart of Software
-  author: Eric Evans
-  summary: \"Designing Data-Intensive Applications is one of the greatest reference books. When I was working on databases at Google I regularly recommended it to coworkers who needed more background on particular distributed systems topics. It will keep being a go-to book as long as I work in this field.\"
-  # link: https://amzn.to/3xLNFqX
+  #link: https://amzn.to/3xLNFqX
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2022-07-10
