feat(img): add path

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: minima
 
-title: Jaume Blog. Sr. Soft Enginyeer
+title: Jaume Blog.
 author: Jaume Cloquell Capo
 email: jaumecloquell@gmail.com
 # url: https://chadbaldwin.net
