feat(img): add path

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -19,3 +19,10 @@
   #link: https://amzn.to/3xLNFqX
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2022-07-10
+
+- title: Domain Drivem Design
+  author: Eric Evans
+  summary: \"\"
+  #link: https://amzn.to/3xLNFqX
+  rating: ⭐⭐⭐⭐⭐
+  completeDate: 2022-07-10
