feat(img): add path

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -20,9 +20,16 @@
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2022-07-10
 
-- title: Domain Drivem Design
+- title: Domain-Drivem Design
   author: Eric Evans
   summary: \"\"
   #link: https://amzn.to/3xLNFqX
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2022-07-10
+
+- title: A Philosophy of Software Design
+  author: John Ousterhout
+  summary: \"\"
+  #link: https://amzn.to/3xLNFqX
+  rating: ⭐⭐⭐⭐⭐
+  completeDate: 2023-02-10
