--- a/_data/books.yml
+++ b/_data/books.yml
@@ -22,14 +22,14 @@
 
 - title: Domain-Drivem Design
   author: Eric Evans
-  summary: \"\"
+  summary: 
   #link: https://amzn.to/3xLNFqX
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2022-07-10
 
 - title: A Philosophy of Software Design
   author: John Ousterhout
-  summary: \"\"
+  summary:
   #link: https://amzn.to/3xLNFqX
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2023-02-10
