feat(img): add path

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -24,12 +24,12 @@
   author: Eric Evans
   summary: 
   #link: https://amzn.to/3xLNFqX
-  rating: ⭐⭐⭐⭐⭐
+  rating: ⭐⭐⭐
   completeDate: 2022-07-10
 
 - title: A Philosophy of Software Design
   author: John Ousterhout
   summary:
   #link: https://amzn.to/3xLNFqX
-  rating: ⭐⭐⭐⭐⭐
+  rating: ⭐⭐⭐⭐
   completeDate: 2023-02-10
