feat(img): add path

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: >
 # Minima variables
 # twitter_username:  chad_baldwin
 # github_username:   chadbaldwin
-# linkedin_username: chadbaldwin
+linkedin_username: jaumecloquell
 #dribbble_username: jekyll
 #facebook_username: jekyll
 #flickr_username: jekyll
