feat(img): add path

--- a/_data/books.yml
+++ b/_data/books.yml
@@ -6,30 +6,30 @@
 #   isCurrent: bool - indicating currently reading
 #   completeDate: date of completion
 
-- title: Operations Anti-Patterns, DevOps Solutions
-  author: Jeffery D. Smith
-  summary: \"Operations Anti-Patterns, DevOps Solutions shows how to implement DevOps techniques in the kind of imperfect environments most developers work in. Part technology tutorial, part reference manual, and part psychology handbook, this practical guide shows you realistic ways to bring DevOps to your team when you don’t have the flexibility to make sweeping changes in organizational structure.\"
-  link: https://amzn.to/3Pqgvmz
+- title: Observability Engineering
+  author: Charity Majors, Liz Fong-Jones, George Miranda
+  summary:
+  link: https://www.amazon.es/dp/1492076449?smid=ATVPDKIKX0DER&_encoding=UTF8&linkCode=gs2&tag=oreilly200e3-21
   #startDate: 2022-07-10
-  #isCurrent: true # removing isCurrent status - intend to restart book from beginning
+  isCurrent: true # removing isCurrent status - intend to restart book from beginning
 
 - title: Designing Data-Intensive Applications
   author: Gene Kim
-  summary: \"Designing Data-Intensive Applications is one of the greatest reference books. I regularly recommended it to coworkers who needed more background on particular distributed systems topics.\"
-  #link: https://amzn.to/3xLNFqX
+  summary:
+  link: https://www.amazon.com/Designing-Data-Intensive-Applications-Reliable-Maintainable/dp/1449373321
   rating: ⭐⭐⭐⭐⭐
   completeDate: 2022-07-10
 
 - title: Domain-Drivem Design
   author: Eric Evans
   summary: 
-  #link: https://amzn.to/3xLNFqX
+  link: https://www.amazon.com/gp/product/0321125215/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=0321125215&linkCode=as2&tag=martinfowlerc-20
   rating: ⭐⭐⭐
   completeDate: 2022-07-10
 
 - title: A Philosophy of Software Design
   author: John Ousterhout
   summary:
-  #link: https://amzn.to/3xLNFqX
+  link: https://www.amazon.com/Philosophy-Software-Design-John-Ousterhout/dp/1732102201
   rating: ⭐⭐⭐⭐
   completeDate: 2023-02-10
