--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,7 @@ defaults:
 
 # Disable highlighting to use highlightJS instead
 # highlighter: none # Not supported by GitHub Pages
+markdown: kramdown
 kramdown:
   syntax_highlighter_opts:
     disable: true
