feat(img): add path

--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ show_excerpts: false
 # Used by simple links page
 social-links:
   # Resume:          https://chadbaldwin.net/resume
-  LinkedIn:        https://linkedin.com/in/jaume-cloquell/
+  LinkedIn:        https://www.linkedin.com/in/jaume-cloquell
   #StackOverflow:   https://stackoverflow.com/users/3474677
   #HackerRank:      https://hackerrank.com/chadwin
   #GitHub:          https://github.com/chadbaldwin
