--- a/_data/books.yml
+++ b/_data/books.yml
@@ -40,3 +40,10 @@
   link: https://www.amazon.com/Philosophy-Software-Design-John-Ousterhout/dp/1732102201
   rating: ⭐⭐⭐⭐
   completeDate: 2023-02-10
+
+- title: Principios y algoritmos de concurrencia 
+  author: Ricardo Galli Granada
+  summary:
+  link: https://www.amazon.es/Principios-algoritmos-concurrencia-Ricardo-Granada/dp/1517029759
+  rating: ⭐⭐⭐⭐
+  completeDate: 2016-01-01
